Fix help drawer overlay z-index

--- a/src/components/BottomDrawer/BottomDrawer.scss
+++ b/src/components/BottomDrawer/BottomDrawer.scss
@@ -90,6 +90,7 @@
   background: white;
   top: 0;
   left: 0;
+  z-index: 1;
 }
 
 .bottom-drawer__overlay--visible {
